--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
 body {
-background: yellow;
-	}
+/* background-color: #BD40FF;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23FFFFFF' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%23BD40FF' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%23ab54ff' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%239763ff' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%238170ff' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%23697bff' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%234c84ff' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%23208dff' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%230094ff' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%23009bff' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%2300a1ff' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%2300a7ff' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%2300acff' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%2300b1ff' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%2300b5ff' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%2300b9ff' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%2300bdfb' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%2300c0f4' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%230BC3EE' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
+background-attachment: fixed;
+background-size: cover; */
+
+background-color: #DFDBE5;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 80 80' width='80' height='80'%3E%3Cpath fill='%230036f8' fill-opacity='0.4' d='M14 16H9v-2h5V9.87a4 4 0 1 1 2 0V14h5v2h-5v15.95A10 10 0 0 0 23.66 27l-3.46-2 8.2-2.2-2.9 5a12 12 0 0 1-21 0l-2.89-5 8.2 2.2-3.47 2A10 10 0 0 0 14 31.95V16zm40 40h-5v-2h5v-4.13a4 4 0 1 1 2 0V54h5v2h-5v15.95A10 10 0 0 0 63.66 67l-3.47-2 8.2-2.2-2.88 5a12 12 0 0 1-21.02 0l-2.88-5 8.2 2.2-3.47 2A10 10 0 0 0 54 71.95V56zm-39 6a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm40-40a2 2 0 1 1 0-4 2 2 0 0 1 0 4zM15 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm40 40a2 2 0 1 0 0-4 2 2 0 0 0 0 4z'%3E%3C/path%3E%3C/svg%3E");
+
+}
