--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,25 @@ background-color: #DFDBE5;
 background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 80 80' width='80' height='80'%3E%3Cpath fill='%230036f8' fill-opacity='0.4' d='M14 16H9v-2h5V9.87a4 4 0 1 1 2 0V14h5v2h-5v15.95A10 10 0 0 0 23.66 27l-3.46-2 8.2-2.2-2.9 5a12 12 0 0 1-21 0l-2.89-5 8.2 2.2-3.47 2A10 10 0 0 0 14 31.95V16zm40 40h-5v-2h5v-4.13a4 4 0 1 1 2 0V54h5v2h-5v15.95A10 10 0 0 0 63.66 67l-3.47-2 8.2-2.2-2.88 5a12 12 0 0 1-21.02 0l-2.88-5 8.2 2.2-3.47 2A10 10 0 0 0 54 71.95V56zm-39 6a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm40-40a2 2 0 1 1 0-4 2 2 0 0 1 0 4zM15 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm40 40a2 2 0 1 0 0-4 2 2 0 0 0 0 4z'%3E%3C/path%3E%3C/svg%3E");
 
 }
-.material-icons{
-	animation: drop 3s infinite;
+
+header {
+	font-family: 'Comforter', cursive;
+	font-size: 60px;
+	color: blue;
+}
+
+.sailboat{
+	animation: sail 3s infinite;
     animation-direction: alternate;
+}
+
+.anchor{
+	position: absolute;
+  top: 50%;
+  transform: translateY(-40%);
+  animation: drop 3s infinite;
+  animation-direction: alternate;
+	
 }
 
 @keyframes drop {
@@ -18,7 +34,15 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     transform: translate(0, 0);    
   }
   100% {
-    transform: translate(0px, 700px);
+    transform: translate(0px, 300px);
   }
 }	
+
+@keyframes sail {
+  0% {
+    transform: translate(0, 0);    
+  }
+  100% {
+    transform: translate(600px, 0px);
+  }
 }
