--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
 body {
-  background-color: lightblue;
   overflow: hidden;
-
+  animation: night 5s infinite;
 }
 
 #circle {
@@ -60,5 +59,14 @@ body {
   }
   50% {
     transform: translate3d(0,5px,0);
+  }
+}
+
+@keyframes night {
+  0%, 100% {
+    background-color: #42b6f5;
+  }
+  50% {
+   	background-color: #292787;
   }
 }
