--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,16 @@
 body {
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg fill='%23ffffff' fill-opacity='0.4'%3E%3Cpolygon fill-rule='evenodd' points='8 4 12 6 8 8 6 12 4 8 0 6 4 4 6 0 8 4'/%3E%3C/g%3E%3C/svg%3E");
   overflow: hidden;
   animation: night 5s infinite;
 }
 
-#circle {
+.circle {
   width: 200px;
   height: 200px;
-  background:Yellow;
+  background-color:Yellow;
+  animation: moon 5s infinite;
   border-radius: 50%
+
 }
 
 @keyframes sail {
@@ -68,5 +71,14 @@ body {
   }
   50% {
    	background-color: #292787;
+  }
+}
+
+@keyframes moon {
+  0%, 100% {
+    background-color: yellow;
+  }
+  50% {
+   	background-color: lightyellow;
   }
 }
