--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,12 @@ body {
   background: #015871;
 }
 
+.sky{
+	color: white;
+	animation: sky 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) infinite;
+  	transform: translate3d(0, 0, 0);
+}
+
 .wave {
   background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/85486/wave.svg) repeat-x; 
   position: absolute;
@@ -53,6 +59,15 @@ body {
   }
   100% {
     margin-left: -1600px;
+  }
+}
+
+@keyframes sky {
+  0% {
+    margin-left: 0;
+  }
+  100% {
+    margin-left: 1600px;
   }
 }
 
