--- a/css/main.css
+++ b/css/main.css
@@ -3,20 +3,38 @@ body {
 background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%23de9300' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%23aa691a' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%23e1a108' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%23935f1b' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%23e3b014' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%237d551b' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%23e4be21' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%23694a1c' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%23e5cd2d' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%2355401d' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%23e5db3b' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%2343351d' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
 background-attachment: fixed;
 background-size: cover;
-/*animation: night 5s infinite;*/
+animation: night 5s infinite;
 }
 
 center {
 	font-family: 'Comforter', cursive;
 	font-size: 150px;
 	color: white;
+	animation-name: head;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+}
+
+.headtext{
+    font-size: 600%;
+    
+}
+
+#text2{
+    animation-delay: 3s;
+}
+
+@keyframes head {
+    0% {font-size:600%; opacity:1;}
+    50% {font-size:0; opacity:0;}
+    100% {font-size:600%;opacity:1;}
 }
 
 .circle {
   width: 200px;
   height: 200px;
   background-color:Yellow;
-  /*animation: moon 5s infinite;*/
+  animation: moon 5s infinite;
   border-radius: 50%
 
 }
