--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,17 @@
 body {
-	background-color: #292787;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%23de9300' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%23aa691a' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%23e1a108' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%23935f1b' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%23e3b014' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%237d551b' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%23e4be21' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%23694a1c' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%23e5cd2d' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%2355401d' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%23e5db3b' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%2343351d' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
-background-attachment: fixed;
+background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='40' height='40' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(135)'%3E%3Crect width='100%25' height='100%25' fill='rgba(41, 39, 135,1)'/%3E%3Ccircle cx='40' cy='20' r='1' fill='rgba(247, 250, 252,1)'/%3E%3Ccircle cx='0' cy='20' r='1' fill='rgba(247, 250, 252,1)'/%3E%3Ccircle cx='20' cy='40' r='1' fill='rgba(247, 250, 252,1)'/%3E%3Ccircle cx='20' cy='0' r='1' fill='rgba(247, 250, 252,1)'/%3E%3Ccircle cx='38' cy='2' r='1' fill='rgba(247, 250, 252,1)'/%3E%3Ccircle cx='2' cy='38' r='1' fill='rgba(247, 250, 252,1)'/%3E%3Ccircle cx='38' cy='38' r='1' fill='rgba(247, 250, 252,1)'/%3E%3Ccircle cx='2' cy='2' r='1' fill='rgba(247, 250, 252,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
 background-size: cover;
-animation: night 5s infinite;
+animation: animatedBackground 8s infinite;
+
+}
+
+@keyframes animatedBackground {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: 100% 0;
+  }
 }
 
 center {
@@ -13,6 +21,19 @@ center {
 	animation-name: head;
     animation-duration: 5s;
     animation-iteration-count: infinite;
+}
+
+.snow{
+	color: white;
+	margin-left: 300px;
+	animation: sky 8s infinite;
+}
+
+#snow2{
+	color: white;
+	margin-left: 600px;
+	animation: sky 8s infinite;
+	animation-delay: 2s;
 }
 
 .headtext{
@@ -33,18 +54,18 @@ center {
 .circle {
   width: 200px;
   height: 200px;
-  background-color:Yellow;
-  animation: moon 5s infinite;
+  background-color:lightyellow;
+  animation: sky2;
   border-radius: 50%
 
 }
 
 @keyframes sky {
   0% {
-    margin-left: 0;
+    margin-top: 0;
   }
   100% {
-    margin-left: 1600px;
+    margin-top: 900px;
   }
 }
 
