--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,6 @@
 body {
-background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='40' height='40' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(135)'%3E%3Crect width='100%25' height='100%25' fill='rgba(41, 39, 135,1)'/%3E%3Ccircle cx='40' cy='20' r='1' fill='rgba(247, 250, 252,1)'/%3E%3Ccircle cx='0' cy='20' r='1' fill='rgba(247, 250, 252,1)'/%3E%3Ccircle cx='20' cy='40' r='1' fill='rgba(247, 250, 252,1)'/%3E%3Ccircle cx='20' cy='0' r='1' fill='rgba(247, 250, 252,1)'/%3E%3Ccircle cx='38' cy='2' r='1' fill='rgba(247, 250, 252,1)'/%3E%3Ccircle cx='2' cy='38' r='1' fill='rgba(247, 250, 252,1)'/%3E%3Ccircle cx='38' cy='38' r='1' fill='rgba(247, 250, 252,1)'/%3E%3Ccircle cx='2' cy='2' r='1' fill='rgba(247, 250, 252,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
-background-size: cover;
-animation: animatedBackground 8s infinite;
-
+animation: pulse 5s infinite;
 }
-
-@keyframes animatedBackground {
-  from {
-    background-position: 0 0;
-  }
-  to {
-    background-position: 100% 0;
-  }
 }
 
 center {
@@ -23,22 +12,8 @@ center {
     animation-iteration-count: infinite;
 }
 
-.snow{
-	color: white;
-	margin-left: 300px;
-	animation: sky 8s infinite;
-}
-
-#snow2{
-	color: white;
-	margin-left: 600px;
-	animation: sky 8s infinite;
-	animation-delay: 2s;
-}
-
 .headtext{
     font-size: 600%;
-    
 }
 
 #text2{
@@ -51,47 +26,19 @@ center {
     100% {font-size:600%;opacity:1;}
 }
 
-.circle {
-  width: 200px;
-  height: 200px;
-  background-color:lightyellow;
-  animation: sky2;
-  border-radius: 50%
-
-}
-
-@keyframes sky {
-  0% {
-    margin-top: 0;
-  }
-  100% {
-    margin-top: 900px;
-  }
-}
-
-@keyframes swell {
-  0%, 100% {
-    transform: translate3d(0,-25px,0);
+@keyframes pulse {
+  0%{
+  	background-color: #7738d7;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 80 80'%3E%3Cg fill='%23ffffff' fill-opacity='0.4'%3E%3Cpath fill-rule='evenodd' d='M0 0h40v40H0V0zm40 40h40v40H40V40zm0-40h2l-2 2V0zm0 4l4-4h2l-6 6V4zm0 4l8-8h2L40 10V8zm0 4L52 0h2L40 14v-2zm0 4L56 0h2L40 18v-2zm0 4L60 0h2L40 22v-2zm0 4L64 0h2L40 26v-2zm0 4L68 0h2L40 30v-2zm0 4L72 0h2L40 34v-2zm0 4L76 0h2L40 38v-2zm0 4L80 0v2L42 40h-2zm4 0L80 4v2L46 40h-2zm4 0L80 8v2L50 40h-2zm4 0l28-28v2L54 40h-2zm4 0l24-24v2L58 40h-2zm4 0l20-20v2L62 40h-2zm4 0l16-16v2L66 40h-2zm4 0l12-12v2L70 40h-2zm4 0l8-8v2l-6 6h-2zm4 0l4-4v2l-2 2h-2z'/%3E%3C/g%3E%3C/svg%3E");
   }
   50% {
-    transform: translate3d(0,5px,0);
+  	background-color: #d73838;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 80 80'%3E%3Cg fill='%23ff9b00' fill-opacity='0.4'%3E%3Cpath fill-rule='evenodd' d='M0 0h40v40H0V0zm40 40h40v40H40V40zm0-40h2l-2 2V0zm0 4l4-4h2l-6 6V4zm0 4l8-8h2L40 10V8zm0 4L52 0h2L40 14v-2zm0 4L56 0h2L40 18v-2zm0 4L60 0h2L40 22v-2zm0 4L64 0h2L40 26v-2zm0 4L68 0h2L40 30v-2zm0 4L72 0h2L40 34v-2zm0 4L76 0h2L40 38v-2zm0 4L80 0v2L42 40h-2zm4 0L80 4v2L46 40h-2zm4 0L80 8v2L50 40h-2zm4 0l28-28v2L54 40h-2zm4 0l24-24v2L58 40h-2zm4 0l20-20v2L62 40h-2zm4 0l16-16v2L66 40h-2zm4 0l12-12v2L70 40h-2zm4 0l8-8v2l-6 6h-2zm4 0l4-4v2l-2 2h-2z'/%3E%3C/g%3E%3C/svg%3E");
+  }
+  100%
+  {
+  	background-color: #7738d7;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 80 80'%3E%3Cg fill='%23ffffff' fill-opacity='0.4'%3E%3Cpath fill-rule='evenodd' d='M0 0h40v40H0V0zm40 40h40v40H40V40zm0-40h2l-2 2V0zm0 4l4-4h2l-6 6V4zm0 4l8-8h2L40 10V8zm0 4L52 0h2L40 14v-2zm0 4L56 0h2L40 18v-2zm0 4L60 0h2L40 22v-2zm0 4L64 0h2L40 26v-2zm0 4L68 0h2L40 30v-2zm0 4L72 0h2L40 34v-2zm0 4L76 0h2L40 38v-2zm0 4L80 0v2L42 40h-2zm4 0L80 4v2L46 40h-2zm4 0L80 8v2L50 40h-2zm4 0l28-28v2L54 40h-2zm4 0l24-24v2L58 40h-2zm4 0l20-20v2L62 40h-2zm4 0l16-16v2L66 40h-2zm4 0l12-12v2L70 40h-2zm4 0l8-8v2l-6 6h-2zm4 0l4-4v2l-2 2h-2z'/%3E%3C/g%3E%3C/svg%3E");
   }
 }
 
-@keyframes night {
-  0%, 100% {
-    background-color: #42b6f5;
-  }
-  50% {
-   	background-color: #292787;
-  }
-}
-
-@keyframes moon {
-  0%, 100% {
-    background-color: yellow;
-  }
-  50% {
-   	background-color: lightyellow;
-  }
-}
