--- a/css/main.css
+++ b/css/main.css
@@ -5,10 +5,6 @@ background-color: paleturquoise;
 center {
 	font-family: 'Comforter', cursive;
 	font-size: 150px;
-	color: white;
-	animation-name: head;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
 }
 
 .headtext{
@@ -25,7 +21,7 @@ center {
     100% {font-size:600%;opacity:1;}
 }
 
-@keyframes backgroundChange {
+/*@keyframes backgroundChange {
   0%{
   	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='40' height='40' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(135)'%3E%3Crect width='100%25' height='100%25' fill='rgba(144, 205, 244,1)'/%3E%3Cpath d='M-10 30h60v2h-60zM-10-10h60v2h-60' fill='rgba(76, 81, 191,1)'/%3E%3Cpath d='M-10 10h60v1h-60zM-10-30h60v1h-60z' fill='rgba(254, 252, 191,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
   }
@@ -44,24 +40,23 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   100%{
   	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='40' height='40' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(135)'%3E%3Crect width='100%25' height='100%25' fill='rgba(144, 205, 244,1)'/%3E%3Cpath d='M-10 30h60v2h-60zM-10-10h60v2h-60' fill='rgba(76, 81, 191,1)'/%3E%3Cpath d='M-10 10h60v1h-60zM-10-30h60v1h-60z' fill='rgba(254, 252, 191,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
   }
-}
+}*/
 
 .shape{
-	
+	background-color: red;
 	height: 400px;
   width: 400px;
-  background-color: gray;
-  animation: 
-    pulse 3s ease infinite alternate, 
+  animation:
+  	pulse 3s ease infinite alternate,   
     nudge 5s linear infinite alternate;
-  border-radius: 100%;
+   border-radius: 100px / 50px;
 }
 
 @keyframes pulse {
-  0%, 100% {
+  0% {
     background-color: red;
   }
-  50% {
+  100% {
     background-color: purple;
   }
 }
@@ -69,14 +64,17 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 @keyframes nudge {
   0%, 100% {
     transform: translate(0, 0);
+     border-radius: 100px / 50px;
   }
   
   50% {
     transform: translate(150px, 0);
+     border-radius: 50%
   }
   
   80% {
     transform: translate(-150px, 0);
+     border-radius: 100%
   }
 }
 }
