--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 body {
 background-color: navy;
-animation: triangle 3s infinite;
 }
 
 center {
@@ -47,7 +46,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 	background-color: green;
 	 width: 0;
       height: 0;
-      border-top: 100px solid red;
+      border-top: 100px solid green;
       border-right: 100px solid transparent;
   animation:   
     triangle 5s linear infinite alternate;
@@ -56,21 +55,18 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
 @keyframes triangle {
   0%, 100% {
-    width: 0;
-    height: 0;
     border-top: 100px solid seagreen;
     border-right: 100px solid transparent;
   }
   
-  50% {
-    transform: translate(150px, 0);
-     border-radius: 50%
+  25% {
+    border-top: 100px solid red;
+    border-left: 100px solid transparent;
   }
   
   80% {
     transform: translate(-150px, 0);
      border-radius: 100%
   }
-}
 }
 
