--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
       border-top: 100px solid green;
       border-right: 100px solid transparent;
   animation:   
-    triangle 5s linear infinite alternate;
+    triangle2 5s linear infinite alternate;
 }
 
 
@@ -59,18 +59,33 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     border-right: 100px solid transparent;
   }
   
-  25% {
-    border-top: 100px solid red;
+  15% {
+    border-top: 100px solid orange;
+    border-left: 100px solid transparent;
+  }
+  
+  30% {
+     border-bottom: 100px solid purple;
+      border-right: 100px solid transparent;
+  }
+  75% {
+  	border-bottom: 100px solid lightblue;
+      border-left: 100px solid transparent;
+  }
+}
+
+@keyframes triangle2 {
+  0%, 100% {
+    border-top: 50px solid seagreen;
+    border-right: 100px solid transparent;
     border-left: 100px solid transparent;
   }
   
   50% {
-     border-bottom: 100px solid red;
-      border-right: 100px solid transparent;
+    border-top: 100px solid transparent;
+    border-right: 100px solid transparent;
+    border-left: 100px solid transparent;
   }
-  75% {
-  	border-bottom: 100px solid red;
-      border-left: 100px solid transparent;
-  }
+  
 }
 
