--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,27 @@
 body {
-	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='40' height='40' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(135)'%3E%3Crect width='100%25' height='100%25' fill='rgba(128, 90, 213,1)'/%3E%3Cpath d='M0 0L20 0L20 20L0 20L0 0zM5.7 5.7L6 14L14 14L14 6zM20 20L40 20L40 40L20 40L20 20zM26 26L26 34L34.3 34.3L34 26z' fill='rgba(226, 232, 240,1)'/%3E%3Cpath d='M26 6L34.3 5.7L34 14L25.4 14.6zM6 26L14.6 25.4L14 34L5.7 34.3z' fill='rgba(237, 242, 247,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
-	background-attachment: fixed;
-	background-size: cover;
-	animation: switch 5s infinite;
+	background-color: #f1f0b2;
+background-image: url("data:image/svg+xml,%3Csvg width='32' height='64' viewBox='0 0 32 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 28h20V16h-4v8H4V4h28v28h-4V8H8v12h4v-8h12v20H0v-4zm12 8h20v4H16v24H0v-4h12V36zm16 12h-4v12h8v4H20V44h12v12h-4v-8zM0 36h8v20H0v-4h4V40H0v-4z' fill='%23d9b92f' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
+}
+
+p {
+	font-size: 34px;
+	padding-left: 10px;
+	font-family: 'Comforter', cursive;
+	animation: changeColor 5s infinite;
 }
 
 center {
 	font-family: 'Comforter', cursive;
 	font-size: 150px;
+}
+
+@keyframes changeColor{
+	0%, 100%{
+		color: black;
+	}
+	50%{
+		color: gray;
+	}
 }
 
 .headtext{
