--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,18 @@
 body {
-	background-color: #f1f0b2;
-background-image: url("data:image/svg+xml,%3Csvg width='32' height='64' viewBox='0 0 32 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 28h20V16h-4v8H4V4h28v28h-4V8H8v12h4v-8h12v20H0v-4zm12 8h20v4H16v24H0v-4h12V36zm16 12h-4v12h8v4H20V44h12v12h-4v-8zM0 36h8v20H0v-4h4V40H0v-4z' fill='%23d9b92f' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
+	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='40' height='40' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(246, 135, 179,1)'/%3E%3Cpath d='M15 5L20 10L25 5L30 10L35 15L30 20L35 25L30 30L25 35L20 30L15 35L10 30L5 25L10 20L5 15L10 10z' fill='rgba(237, 242, 247,1)'/%3E%3Cpath d='M0 10L20 20L10 20zM30 0L20 20L20 10zM40 30L20 20L30 20zM10 40L20 30L20 20z' fill='rgba(213, 63, 140,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
+	background-attachment: fixed;
+	background-size: cover;
 }
 
 p {
 	font-size: 34px;
 	padding-left: 10px;
-	font-family: 'Comforter', cursive;
-	animation: changeColor 5s infinite;
+	font-family: 'Sofia', cursive;
+	color: black;
+}
+
+.iconAdded{
+
 }
 
 center {
