Water the flowers

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,17 @@ p {
 }
 
 .iconAdded{
+	animation: waterFlowers 6s infinite;
+}
 
+@keyframes waterFlowers {
+	0%, 100%{
+		transform: rotate(0deg);
+	}
+	50%
+	{
+		transform: rotate(360deg);
+	}
 }
 
 center {
