--- a/css/main.css
+++ b/css/main.css
@@ -56,26 +56,25 @@ center {
 
 @keyframes switch {
 	0%, 100%{
-	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='40' height='40' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(246, 135, 179,1)'/%3E%3Cpath d='M15 5L20 10L25 5L30 10L35 15L30 20L35 25L30 30L25 35L20 30L15 35L10 30L5 25L10 20L5 15L10 10z' fill='rgba(237, 242, 247,1)'/%3E%3Cpath d='M0 10L20 20L10 20zM30 0L20 20L20 10zM40 30L20 20L30 20zM10 40L20 30L20 20z' fill='rgba(213, 63, 140,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
+	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='219' height='219' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(246, 135, 179,1)'/%3E%3Cpath d='M0 0h10v-20h-10zM20 0h10v-20h-10zM0 40h10v-20h-10zM20 40h10v-20h-10z ' fill='rgba(237, 242, 247,1)'/%3E%3Cpath d='M10 20h10v-20h-10zM30 20h10v-20h-10z' fill='rgba(144, 205, 244,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
 	background-attachment: fixed;
 	background-size: cover;
 		}
-	50%{
-		background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='2' height='2' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(246, 135, 179,1)'/%3E%3Cpath d='M15 5L20 10L25 5L30 10L35 15L30 20L35 25L30 30L25 35L20 30L15 35L10 30L5 25L10 20L5 15L10 10z' fill='rgba(237, 242, 247,1)'/%3E%3Cpath d='M0 10L20 20L10 20zM30 0L20 20L20 10zM40 30L20 20L30 20zM10 40L20 30L20 20z' fill='rgba(144, 205, 244,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
-		background-attachment: fixed;
+	25%{
+		background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='219' height='219' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(246, 135, 179,1)'/%3E%3Cpath d='M-20 10h6.67v20h-6.67zM 5 10h6.67v20h-6.67zM 25 10h6.67v20h-6.67z ' fill='rgba(237, 242, 247,1)'/%3E%3Cpath d='M-5 10h6.67v20h-6.67zM 15 10h6.67v20h-6.67zM 35 10h6.67v20h-6.67z ' fill='rgba(144, 205, 244,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
+			background-attachment: fixed;
 	background-size: cover;
 	}
-	/*50%
-  {
-  	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='40' height='40' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(135)'%3E%3Crect width='100%25' height='100%25' fill='rgba(128, 90, 213,1)'/%3E%3Cpath d='M0 0L20 0L20 20L0 20L0 0zM5.7 5.7L6 14L14 14L14 6zM20 20L40 20L40 40L20 40L20 20zM26 26L26 34L34.3 34.3L34 26z' fill='rgba(128, 90, 213,1)'/%3E%3Cpath d='M26 6L34.3 5.7L34 14L25.4 14.6zM6 26L14.6 25.4L14 34L5.7 34.3z' fill='rgba(128, 90, 213,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E "); 
+	50%{
+  	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='219' height='219' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(246, 135, 179,1)'/%3E%3Cpath d='M-10 10h60v20h-60z' fill='rgba(237, 242, 247,1)'/%3E%3Cpath d='M-30 10h20l-40 20h-20zM10 10h20l-40 20h-20zM50 10h20l-40 20h-20z' stroke-miterlimit='99' fill='rgba(144, 205, 244,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
   	background-attachment: fixed;
 	background-size: cover;
   }
   75%{
-  	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='40' height='40' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(135)'%3E%3Crect width='100%25' height='100%25' fill='rgba(128, 90, 213,1)'/%3E%3Cpath d='M0 0L20 0L20 20L0 20L0 0zM5.7 5.7L6 14L14 14L14 6zM20 20L40 20L40 40L20 40L20 20zM26 26L26 34L34.3 34.3L34 26z' fill='rgba(237, 242, 247,1)'/%3E%3Cpath d='M26 6L34.3 5.7L34 14L25.4 14.6zM6 26L14.6 25.4L14 34L5.7 34.3z' fill='rgba(128, 90, 213,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
+  	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='219' height='219' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(246, 135, 179,1)'/%3E%3Ccircle cx='5' cy='15' r='5' fill='rgba(237, 242, 247,1)'/%3E%3Ccircle cx='15' cy='25' r='5' fill='rgba(237, 242, 247,1)'/%3E%3Ccircle cx='25' cy='15' r='5' fill='rgba(237, 242, 247,1)'/%3E%3Ccircle cx='45' cy='15' r='5' fill='rgba(237, 242, 247,1)'/%3E%3Ccircle cx='35' cy='25' r='5' fill='rgba(237, 242, 247,1)'/%3E%3Ccircle cx='55' cy='25' r='5' fill='rgba(237, 242, 247,1)'/%3E%3Ccircle cx='15' cy='15' r='5' fill='rgba(144, 205, 244,1)'/%3E%3Ccircle cx='35' cy='15' r='5' fill='rgba(144, 205, 244,1)'/%3E%3Ccircle cx='5' cy='25' r='5' fill='rgba(144, 205, 244,1)'/%3E%3Ccircle cx='25' cy='25' r='5' fill='rgba(144, 205, 244,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
   	background-attachment: fixed;
 	background-size: cover;
-  	}*/
+  	}
 }
 
 /*@keyframes backgroundChange {
