--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='129' height='129' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(184, 50, 128,1)'/%3E%3Cpath d='M20 20v20h-20v-20zM20 10v20l10-10h-20z' fill='rgba(112, 36, 89,1)'/%3E%3Cpath d='M0 10v10l20-20h-20zM30 40h-10l20-20v20zM20 20h11v-11h-11z' fill='rgba(229, 62, 62,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
+	background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='192' height='192' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(99, 179, 237,1)'/%3E%3Cpath d='M0 20L20 0L0 0zM20 40L40 20L40 40z' fill='rgba(233, 216, 253,1)'/%3E%3Cpath d='M0 20L20 40L20 20L0 20M20 20L20 0L40 20L20 20z' fill='rgba(128, 90, 213,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
 	background-attachment: fixed;
 	background-size: cover;
 }
@@ -9,6 +9,12 @@ p {
 	padding-left: 10px;
 	font-family: 'Sofia', cursive;
 	color: white;
+}
+
+#rectangle {
+  width: 200px;
+  height: 100px;
+  background: red;
 }
 
 .iconAdded{
