--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body {
 	background-color: #292787;
+
 }
 
 p {
@@ -17,7 +18,7 @@ p {
 }
 
 .iconAdded{
-
+margin-bottom: -500px;
 }
 
 @keyframes sky {
