--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,33 @@ p {
 }
 
 .circle {
-  width: 1500px;
-  height: 1500px;
+  width: 200px;
+  height: 200px;
   background: lightyellow;
+  animation: Oval 5s infinite;
   border-radius: 50%
 }
+
+@keyframes Oval{
+	0%{
+	  width: 200px;
+  height: 200px;
+  border-radius: 50%
+	}
+	25%{
+	  width: 200px;
+      height: 100px;
+      border-radius: 100px / 50px;
+	}
+
+}
+
+.oval {
+      width: 200px;
+      height: 100px;
+      background: red;
+      border-radius: 100px / 50px;
+    }
 
 .iconAdded{
 
