--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ p {
 }
 
 .circle {
+	margin-top: 300px;
   width: 200px;
   height: 200px;
   background: lightyellow;
@@ -20,7 +21,7 @@ p {
 
 @keyframes Oval{
 	0%{
-	  width: 200px;
+	width: 200px;
   height: 200px;
   border-radius: 50%
 	}
@@ -28,6 +29,11 @@ p {
 	  width: 200px;
       height: 100px;
       border-radius: 100px / 50px;
+	}
+	50%{
+	  width: 200px;
+      height: 100px;
+      border-radius: 50px / 100px;
 	}
 
 }
