Using a hand fan

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ p {
 }
 
 @keyframes Oval{
-	0%{
+	0%, 100%{
 		width: 0;
       height: 0;
       border-left: 50px solid transparent;
@@ -32,7 +32,7 @@ p {
       height: 0;
       border-left: 50px solid transparent;
       border-right: 50px solid transparent;
-      border-bottom: 100px solid red;
+      border-top: 100px solid orange;
 	}
 
 }
