Yellow and Green Shape

--- a/css/main.css
+++ b/css/main.css
@@ -49,10 +49,10 @@ p {
 	background: #ed8936;
 	}
 	20%{
-		background: ;
+		background: #ecc94b;
 	}
 	30%{
-		background: ;
+		background:#48bb78 ;
 	}
 	40%{
 		background: ;
