The blue shades

--- a/css/main.css
+++ b/css/main.css
@@ -55,13 +55,13 @@ p {
 		background:#48bb78 ;
 	}
 	40%{
-		background: ;
+		background:#38b2ac ;
 	}
 	50%
-	{background: ;
+	{background: #4299e1;
 		
 	}
-	60%{background: ;
+	60%{background: #667eea;
 		
 	}
 	70%{
